# ligature_compare

./: Cargo.toml
benches/: allsorts.rs  harfbuzz.rs  rustybuzz.rs
src/: lib.rs
