[package]
name = "ligature_compare"
version = "0.1.0"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allsorts = "0.4.0"
harfbuzz_rs = "1.1.1"
anyhow = "1.0.31"
tinyvec = "0.3.3"
