[package]
name = "ligature_compare"
version = "0.1.0"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allsorts = "0.5.1"
harfbuzz_rs = { version = "1.2.0", default-features = false, features = ["build-native-harfbuzz"] }
anyhow = "1.0.31"
rustybuzz = "0.3.0"
ttf-parser = "0.9.0"
tinyvec = "1.1.0"
